# rustka

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: README.md  docker-build.yml
benches/: memory_bench.rs
examples/: init_sentry_topics.py  run_all_tests.py  test_api_negotiation.py  test_api_version.py  test_arroyo_rebalance.py  test_authentication.py  test_basic_rebalance.py  test_client.py  test_commit_log.py  test_commit_log_fix.py  test_consumer_group.py  test_headers.py  test_kafka_compatibility.py  test_minimal.py  test_minimal_fetch.py  test_modern_api.py  test_producer_consumer_threads.py  test_recordbatch.py  test_sentry_compatibility.py  test_sentry_like.py  test_simple_compatibility.py  test_simple_negotiation.py  test_snuba_compatibility.py
src/: broker.rs  consumer_group.rs  dashboard.rs  lib.rs  main.rs  metrics.rs  retention.rs  storage.rs
static/: dashboard.html
tests/: dashboard_test.rs  retention_test.rs
