[package]
name = "rustka"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustka"
path = "src/lib.rs"

[[bin]]
name = "rustka"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
bytes = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
kafka-protocol = "0.15"
indexmap = "2.10"
local-ip-address = "0.6"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.6"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-sys"]

[[bench]]
name = "memory_bench"
harness = false
